assets/scss/sticky-menu-minimal.scss
.pt-sticky-menu {
	display: flex;
	align-items: center;
	justify-content: space-between;

	&__container {
		display: none;
		position: fixed;
		width: 100%;
		top: 0;
		left: 0;
		z-index: 100;
		background-color: #ffffff;
		box-shadow: 0 1px 3px rgba(0, 0, 0, .1);

		.admin-bar & {
			top: 0;

			@media (min-width: 600px) {
				top: ptr(46);
			}

			@media (min-width: 783px) {
				top: ptr(32);
			}
		}
	}

	&__logo {
		margin: ptr(10) 0;
	}

	&__navigation {
		align-self: center;

		@media (min-width: 992px) {
			align-self: flex-end;
		}

		.main-navigation {
			display: none;

			@media (min-width: 992px) {
				display: inline-block;
			}
		}
	}

	&__call-to-action {
		display: inline;
		margin-left: ptr(10);
	}
}

